feat(model): serialize complete project contract